// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutoResizer renders with a class name 1`] = `
<div
  className="foo"
  style={
    Object {
      "height": 0,
      "overflow": "visible",
      "width": 0,
    }
  }
>
  <table
    height={0}
    width={0}
  />
</div>
`;

exports[`AutoResizer renders with a height 1`] = `
<div
  className={undefined}
  style={
    Object {
      "overflow": "visible",
      "width": 0,
    }
  }
>
  <table
    height={222}
    width={0}
  />
</div>
`;

exports[`AutoResizer renders with a width 1`] = `
<div
  className={undefined}
  style={
    Object {
      "height": 0,
      "overflow": "visible",
    }
  }
>
  <table
    height={0}
    width={111}
  />
</div>
`;

exports[`AutoResizer renders with a width and height 1`] = `
<table
  height={222}
  width={111}
/>
`;

exports[`AutoResizer renders with no props 1`] = `
<div
  className={undefined}
  style={
    Object {
      "height": 0,
      "overflow": "visible",
      "width": 0,
    }
  }
>
  <table
    height={0}
    width={0}
  />
</div>
`;
